--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ name = "day07"
 [[bin]]
 name = "day08"
 
+[[bin]]
+name = "day09"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
